--- a/package.json
+++ b/package.json
@@ -10,18 +10,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "expo": "~53.0.9",
-    "expo-constants": "~17.1.6",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo": "53.0.20",
+    "expo-constants": "~17.1.7",
+    "expo-linking": "~7.1.7",
+    "expo-router": "~5.1.4",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.532.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.5",
+    "react-native-heroicons": "^4.0.0",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-maps": "1.20.1",
     "react-native-otp-entry": "^1.8.4",
-    "react-native-reanimated": "^3.16.2",
+    "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "^15.12.0",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
