--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@react-native-community/datetimepicker": "^8.4.3",
     "expo": "53.0.20",
     "expo-constants": "~17.1.7",
     "expo-linear-gradient": "~14.1.5",
