--- a/app.json
+++ b/app.json
@@ -28,6 +28,7 @@
       "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
+    "platforms": ["ios", "android", "web"],
     "plugins": [
       "expo-router"
     ],
